added collected static

--- a/.gitignore
+++ b/.gitignore
@@ -266,3 +266,6 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# collected static
+/printserver/collectedstatic/
